objects/ssot__GiftSoftCredit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdvancementType__c</fullName>
        <label>Advancement Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GenerationalCohort__c</fullName>
        <label>Generational Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftTransactionId__c</fullName>
        <label>GiftTransaction</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationAchievement__c</fullName>
        <label>Graduation Achievement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationCohort__c</fullName>
        <label>Graduation Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>GiftSoftCreditId</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartialAmount__c</fullName>
        <label>Partial Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PartialPercent__c</fullName>
        <label>Partial Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientId__c</fullName>
        <label>Recipient</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Role__c</fullName>
        <label>Role</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoftCreditAmount__c</fullName>
        <label>Soft Credit Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761239794_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftSoftCredit_GiftTransactionId_map_rel</label>
        <referenceTo>ssot__GiftTransaction__dlm</referenceTo>
        <relationshipLabel>GiftSoftCredit_GiftTransactionId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761239794_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761239861_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftSoftCredit_RecipientId_map_Accou_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>GiftSoftCredit_RecipientId_map_Accou_rel</relationshipLabel>
        <relationshipName>rel_1697761239861_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732247637700_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftSoftCredit_ContactId_map_Individ_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>GiftSoftCredit_ContactId_map_Individ_rel</relationshipLabel>
        <relationshipName>rel_1732247637700_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>